--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -1,1 +1,1 @@
-logo: 2017-07-08-okayama-OR-mapper-LT/assets/youtrack_jetnrains_logo.png
+logo: 2017-07-08-okayama-OR-mapper-LT/assets/youtrack-sign.svg
